--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css",
-        "variables", "breakpoints", "slider";
+        "variables", "breakpoints", "animations", "slider";
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,800&display=swap');
 
@@ -111,6 +111,14 @@ main {
   display: flex;
 }
 
+.closeOut {
+  @include desktop-and-wider {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 nav {
   background-color: $color2;
   padding: 0 2.25rem;
@@ -197,6 +205,18 @@ h1 {
     margin: .25rem auto .25rem 0;
     font-size: 1.5rem;
   }
+
+  @include desktop-and-wider {
+    transition: .5s;
+    &:hover {
+      transform: scale(1.25) translate3d(10px, 0, 0);
+    }
+  }
+}
+
+h1 em {
+  font-weight: 600,
+
 }
 
 .alert-space {
@@ -219,6 +239,16 @@ section,
 .activity,
 .secondary-graphs {
   border-bottom: 1px solid $midgrey;
+}
+
+.new-member,
+.activity {
+  @include desktop-and-wider {
+    transition: .5s;
+    &:hover {
+      background-color: $subtle1;
+    }
+  }
 }
 
 .secondary-graphs {
@@ -316,6 +346,13 @@ section:last-child {
   background-color: $lightgrey;
   display: flex;
   flex-direction: row;
+  transition: .5s;
+
+  @include desktop-and-wider {
+    &:hover {
+      background-color: $midgrey
+    }
+  }
 
   div {
     margin: 0;
@@ -397,6 +434,14 @@ section h3 {
 .navicon {
   fill: #fff;
   height: 2rem;
+
+  @include desktop-and-wider {
+    &:hover {
+      animation: twist 2.5s infinite;
+      cursor: pointer;
+    }
+  }
+
 }
 
 header h2 {
@@ -421,6 +466,14 @@ header h2 {
     transition: .5s;
     padding: .25rem 1rem;
     border-radius: 16px;
+
+    @include desktop-and-wider{
+      &:hover {
+        background-color: $subtle2;
+        cursor: pointer;
+      }
+    }
+
   }
 
   input:checked + label {
