per feedback: removed comma from grid column template so that it actually gets applied.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ body {
     grid-template-areas:
       "header header"
       "nav main";
-    grid-template-columns: 68px, auto;
+    grid-template-columns: 68px auto;
     grid-template-rows: auto;
 
   }
